--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                        <a href="https://github.com/saurav109677" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
-                                 <p style="text-align: center; margin-bottom: -20px;"><strong> Connect to me.</strong></p>
+                                 <!--<p style="text-align: center; margin-bottom: -20px;"><strong> Connect to me.</strong></p>-->
                               </div>
                            </div>
                         </div>
