--- a/index.html
+++ b/index.html
@@ -105,7 +105,15 @@
                                        <h3>Web<br> Designing</h3>
                                     </div>
                                  </a>
-                              </div>  
+                              </div>
+							  <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                                 <a href="certification.html" target="_blank">
+                                    <div class="services color-1">
+                                       <span class="icon2"><i class="fa fa-user"></i></span>
+                                       <h3>Certification<br>.</h3>
+                                    </div>
+                                 </a>
+                              </div>
                            </div>
                            <!--<div class="row">
                               <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
@@ -252,34 +260,12 @@
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="#">Tata Consultancy Services</a> <span>July 2019 - Present</span></h2>
-                                       <p><strong>Assistant System Engineer</strong><br>Something to write........</p>
+                                       <p><strong>Assistant System Engineer</strong><br>Working as developer for building websites using Angular8 and SpringBoot.</p>
                                        <p></p>
                                     </div>
                                  </div>
                               </article>
-                              <!--<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-                                 <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-1">
-                                       <i class="fa fa-code"></i>
-                                    </div>
-                                    <div class="timeline-label">
-                                       <h2><a href="#">ThinkPedia LLP</a> <span>May 2019 - June 2019</span></h2>
-                                       <p><strong>Software Developement Engineering Intern</strong><br>Developed Customer Web Application for social media management from scratch.<br>Designed frontend with Angular 7 and backend services with Java framework spring-boot. Worked in System Design, System Testing, API Integration and Cloud Services for the deployment and production of the application.</p>
-                                       <p></p>
-                                    </div>
-                                 </div>
-                              </article>
-                              <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
-                                 <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-2">
-                                       <i class="fa fa-globe"></i>
-                                    </div>
-                                    <div class="timeline-label">
-                                       <h2><a href="#">Fossasia Organization</a> <span>December 2018 - April 2019 </span></h2>
-                                       <p><strong>Open Source Contributor</strong><br>Contributed in projects Badgeyay, OpenEvent Frontend, account.susi.ai. <br>Raised 13 pull requests and 10+ front-end and backend issues. Also reviewed, perfected and pushed the codes of other developers in production.</p>
-                                    </div>
-                                 </div>
-                              </article>-->
+                          
                               <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-none">
