--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
                                     <!--<a class="bmc-button" target="_blank" href="https://www.buymeacoffee.com/r194dME8y"><img src="https://bmc-cdn.nyc3.digitaloceanspaces.com/BMC-button-images/BMC-btn-logo.svg" alt="Buy me a coffee"><span style="margin-left:5px">Buy me a coffee</span></a>-->
                                     <br><br>
-                                    <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/Vinay_Somawat" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.linkedin.com/in/vinasomawat/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                                       <a href="https://www.quora.com/profile/Vinay-Somawat" style="color: black;" class="fa fa-quora"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <p style="font-size: 30px; margin-bottom: 0px;">z&nbsp;&nbsp;&nbsp;&nbsp;
+                                       <a href="https://www.linkedin.com/in/saurav-kumar-989482157/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+                                       
                                        <a href="https://github.com/saurav109677" style="color: black;" class="fa fa-github"></a>
                                     </p>
                                  </div>
