--- a/webdev.html
+++ b/webdev.html
@@ -107,11 +107,11 @@
 
 									 The course also draw from numerous case studies and applications, so I have also learn how to apply the concepts in a real time project.</p>
                                     <img src="images/springCertification.jpg" width = "600" height = "500"><br><br>
-									<h4><a href="https://www.udemy.com/course/spring-5-with-spring-boot-2/"><strong>Angular 8 Hands on</strong></a></h4>
+									<!--<h4><a href="https://www.udemy.com/course/spring-5-with-spring-boot-2/"><strong>Angular 8 Hands on</strong></a></h4>
                                     <p>In the course I have learned all of the main principles of building websites in Angular, including the Typescript Language. This is taught with reference to Java and Java web technology examples, making it a very quick and easy way for Java developers to upgrade their skills to Angular.<br>
 									
 									The course made me confident on building a dynamic webpage by giving assignments and a real time project using Angular.</p>
-                                    <img src="images/springCertification.jpg" width = "600" height = "500"><br><br>
+                                    <img src="images/springCertification.jpg" width = "600" height = "500"><br><br>-->
                                    
                                  </div>
                               </div>
